# mwpdfify

./: .gitignore  PoC.py  README.md  requirements.txt  setup.cfg
src/: mwpdfify.py
