[metadata]
name = mwpdfify
version = attr: src.__version__
author = aisuneko
author_email = iceneko@protonmail.ch
maintainer = aisuneko
maintainer_email = iceneko@protonmail.ch
description = Utility for batch downloading (certain) pages from MediaWiki sites as printable PDFs.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = wiki, MediaWiki, wikipedia, PDF, wkhtml2pdf, weasyprint, scraper
license = LGPLv3
url = https://github.com/aisuneko/proxcat
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Internet

[options]
packages = src

[options.extras_require]
PDF =
    pdfkit
    weasyprint

[options.entry_points]
console_scripts =
    mwpdfify = src.mwpdfify:main